--- a/Source_Code/BetterTeamUpgrades.csproj
+++ b/Source_Code/BetterTeamUpgrades.csproj
@@ -32,13 +32,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony">
-      <HintPath>..\..\..\source\repos\repo.mods\packages\team-upgrades\BepInEx\core\0Harmony.dll</HintPath>
+      <HintPath>..\..\repo.mods\packages\team-upgrades\BepInEx\core\0Harmony.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\REPO\REPO_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="BepInEx">
-      <HintPath>..\..\..\source\repos\repo.mods\packages\team-upgrades\BepInEx\core\BepInEx.dll</HintPath>
+      <HintPath>..\..\repo.mods\packages\team-upgrades\BepInEx\core\BepInEx.dll</HintPath>
     </Reference>
     <Reference Include="PhotonRealtime">
       <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\REPO\REPO_Data\Managed\PhotonRealtime.dll</HintPath>
